Updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ bin-release/
 *.air
 *.ipa
 *.apk
+baseline.py
+baseline2.py
+data_cleaner.py
+ratio.py
+
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
